# autoCommit

./: package-lock.json
autoCommit/: .gitignore  Makefile  NOTE  README.md  download_model.py  publish.sh  pyproject.toml  requirements.txt  sandbox.py
autoCommit/FT/: README.md  config.yaml  evaluate_model.py  evaluation_gpt2_1k.json  finetune_gemma.py  finetune_gemma2b.py  finetune_gemma4.py  finetune_small.py  finetune_with_diff.py  ft_diff_1k_log.txt  ft_gpt2_log.txt  ft_log.txt  prepare_dataset.py  requirements.txt  test_model.py
autoCommit/datasets/commitpack/: load_dataset.py  prepare_dataset.py  prepared_commitpack.jsonl  prepared_commitpack_1k.jsonl  print_first_sample.py
autoCommit/sandbox/: README.md  main.py  test_FT_model.py
autoCommit/src/gac/: __init__.py  cli.py  config.py  git_utils.py  installer.py  llm.py  llm.py.backup  prompts.py  sandbox.py
autoCommit/tests/: __init__.py
