[project]
name = "gac"
version = "0.1.0"
description = "Git Auto Commit - Local LLM powered commit message generator"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "toml>=0.10.2",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "bitsandbytes>=0.41.0",
]

[project.scripts]
gac = "gac.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
